# linkmetrics

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  schemas.py  test_llm_interface.py  test_services.py
backend/: config.py  main.py  schemas.py  test_services.py
backend/data/: comments_with_scores.csv  post_data.csv
backend/llm_interface/: __init__.py  aihubmix_client.py
backend/services/: ICP_scorer.py  __init__.py  analyze_post_potential.py  comment_analyzer.py
data/: comments_data.csv  comments_with_scores.csv
frontend/: index.html
services/: data_extractor.py
utils/: __init__.py  load_data.py
